Add avatar to portfolio

--- a/package.json
+++ b/package.json
@@ -10,13 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@deepgram/sdk": "^3.5.1",
     "@headlessui/react": "^1.7.18",
+    "@openai/realtime-api-beta": "github:simliai/openai-realtime-api-beta",
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "framer-motion": "^11.0.8",
+    "groq-sdk": "^0.6.1",
     "lucide-react": "^0.344.0",
+    "openai": "^4.61.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.8.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "simli-client": "^1.2.6",
+    "tailwind-merge": "^2.5.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
